# ChangeLog for dev-dotnet/gtksourceview-sharp
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-dotnet/cvs-repo/gentoo-x86/dev-dotnet/gtksourceview-sharp/ChangeLog,v 1.4 2004/06/02 16:06:20 latexer Exp $

*gtksourceview-sharp-0.3 (02 Jun 2004)

  02 Jun 2004; Peter Johanson <latexer@gentoo.org>
  gtksourceview-sharp-0.3.ebuild:
  Beta2. You know you love it.

  05 May 2004; David Holm <dholm@gentoo.org> gtksourceview-sharp-0.2.ebuild:
  Added to ~ppc.

*gtksourceview-sharp-0.2 (05 May 2004)

  05 May 2004; Peter Johanson <latexer@gentoo.org>
  gtksourceview-sharp-0.2.ebuild:
  Beta1 love.

*gtksourceview-sharp-0.1.0 (01 Apr 2004)

  01 Apr 2004; Peter Johanson <latexer@gentoo.org>
  gtksourceview-sharp-0.1.0.ebuild, metadata.xml:
  Initial commit. Getting ready for monodevelop.
