@@ -1,8 +1,6 @@
 MD5 726b073401a8d1a035b7401a817bc9b2 gtksourceview-sharp-0.3.ebuild 826
 MD5 12ef602bf97e83d3be15f26ce0c7dca8 gtksourceview-sharp-0.2.ebuild 831
-MD5 8b73f0fdddc555edae7ffcf41f84e114 ChangeLog 828
+MD5 ce464ed852eee5b3e3acd7a571902913 ChangeLog 953
 MD5 76b314cc7b7b79b298dd4889dff8c9cd metadata.xml 159
-MD5 a3b9f5de5d68b88d4cc83387217dc8a5 gtksourceview-sharp-0.1.0.ebuild 698
 MD5 9bd46319da5237a4bdff3dfa44a801f8 files/digest-gtksourceview-sharp-0.2 75
 MD5 0e2eb848d93aa1e05ed1eaeca76cf4c5 files/digest-gtksourceview-sharp-0.3 75
-MD5 ecdf78500431d772e52b70a077600f1c files/digest-gtksourceview-sharp-0.1.0 77
