@@ -1,6 +1,10 @@
 # ChangeLog for dev-dotnet/gtksourceview-sharp
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-dotnet/cvs-repo/gentoo-x86/dev-dotnet/gtksourceview-sharp/ChangeLog,v 1.4 2004/06/02 16:06:20 latexer Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-dotnet/cvs-repo/gentoo-x86/dev-dotnet/gtksourceview-sharp/ChangeLog,v 1.5 2004/06/02 16:44:43 latexer Exp $
+
+  02 Jun 2004; Peter Johanson <latexer@gentoo.org>
+  gtksourceview-sharp-0.1.0.ebuild:
+  Removing all pre-Beta1 mono stuff.
 
 *gtksourceview-sharp-0.3 (02 Jun 2004)
 
